--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ Layout
 ------------------------------------------- */
 .row {
 	display: flex;
+	flex-wrap: wrap;
 }
 
 .col-1-3 {
@@ -140,11 +141,11 @@ footer {
 
 input {
 	padding: 6px 20px;
-  margin: 30px;
-  text-align: center;
-  border: 0;
-  font-size: 13px;
-  text-transform: uppercase;
+  	margin: 30px;
+  	text-align: center;
+  	border: 0;
+  	font-size: 13px;
+  	text-transform: uppercase;
 }
 
 .social-icons a {
